# lip-sync-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: load_3rdparty.cmake  utils.cmake
doc/: Android-API.md  C-API.md  Cpp-API.md
scripts/: infer_demo.py
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audio_processor.cpp  audio_processor.hpp  fbank.cpp  fbank.hpp
src/core/: CMakeLists.txt  dnn_infer.cpp  dnn_infer.hpp  face_processor.cpp  face_processor.hpp  fbank.cpp  fbank.hpp  feature_extractor.cpp  feature_extractor.hpp  image_cache.cpp  image_cache.hpp  image_cycler.cpp  image_cycler.hpp  types.hpp  wavlip.cpp  wavlip.hpp  wenet_encoder.cpp
src/infer/: CMakeLists.txt  dnn_infer.cpp  dnn_infer.hpp  face_processor.cpp  feature_extractor.cpp  types.hpp  wavlip.cpp  wenet_encoder.cpp  wenet_encoder.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/pipe/: CMakeLists.txt  image_cache.cpp  image_cache.hpp  image_cycler.cpp  image_cycler.hpp  lip_sync_jni.cc  lip_sync_sdk.cpp  lip_sync_sdk.hpp  lip_sync_sdk_c.cpp  lip_sync_sdk_impl.cpp  lip_sync_sdk_impl.hpp  types.h  wav_lip_manager.hpp
src/pipe/api/: lip_sync_jni.h  lip_sync_sdk.h  types.h
src/utils/: thread_pool.hpp  thread_safe_queue.hpp  time_utils.hpp
tests/: CMakeLists.txt  test_fbank.cc  test_image_cycler.cc  test_lip_sync_sdk.cc  test_logger.cc  test_wavlip.cc  test_wenet_encoder.cc
