CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

LOAD_OPENCV()
LOAD_SNDFINE()
LOAD_KISSFFT()
LOAD_ONNXRUNTIME()
LOAD_FFMPEG()

INCLUDE_DIRECTORIES(
    ${PROJECT_INCLUDE_DIR}
    ${SndFile_INCLUDE_DIR}
    ${kissfft_INCLUDE_DIR}
    ${OpenCV_INCLUDE_DIRS}
    ${FFMPEG_INCLUDE_DIR}
    ${ONNXRUNTIME_INCLUDE_DIR}
)

LINK_LIBRARIES(
    lip_sync
    audio
    core
    module_logger
    ${SndFile_LIBS}
    ${kissfft_LIBS}
    ${ONNXRUNTIME_LIBS}
    ${OpenCV_LIBS}
    ${FFMPEG_LIBS}
)

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/tests)
FILE(GLOB_RECURSE APP_SOURCES *.cc)
MESSAGE(STATUS "APP SOURCES: ${APP_SOURCES}")
FOREACH(sourcefile ${APP_SOURCES})
    STRING(REGEX MATCH "[^/]+$" sourcefilewithoutpath ${sourcefile})
    STRING(REPLACE ".cc" "" testname ${sourcefilewithoutpath})
    ADD_EXECUTABLE( ${testname} ${sourcefile})
    
    INSTALL(TARGETS ${testname} DESTINATION tests)
ENDFOREACH(sourcefile ${APP_SOURCES})

FILE(GLOB DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/*")
IF(DATA_FILES)
    INSTALL(FILES ${DATA_FILES} DESTINATION data)
ENDIF()

FILE(GLOB MODEL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/models/*")
IF(MODEL_FILES)
    INSTALL(FILES ${MODEL_FILES} DESTINATION models)
ENDIF()
