CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(audio)

LOAD_GTEST()
LOAD_OPENCV()
LOAD_SNDFINE()
LOAD_KISSFFT()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/audio)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/audio COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(fbank ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(fbank PRIVATE ${CMAKE_INCLUDE_PATH})
INSTALL(TARGETS fbank DESTINATION lib)
