CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(audio)

LOAD_SNDFINE()
LOAD_KISSFFT()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/audio)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/audio COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(audio ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(audio PRIVATE ${SndFile_INCLUDE_DIR} ${kissfft_INCLUDE_DIR})
INSTALL(TARGETS audio DESTINATION lib)
