CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(infer)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

LOAD_KISSFFT()
LOAD_OPENCV()
LOAD_ONNXRUNTIME()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/infer)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/infer COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(infer ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(infer PRIVATE ${PROJECT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${ONNXRUNTIME_INCLUDE_DIR} ${kissfft_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES(infer PRIVATE module_logger)
# INSTALL(TARGETS infer DESTINATION lib)
