CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(lip_sync)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

LOAD_SNDFINE()
LOAD_KISSFFT()
LOAD_OPENCV()
LOAD_ONNXRUNTIME()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/lip_sync)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/lip_sync COPYONLY)
ENDFOREACH()

FILE(GLOB HEADER_FILES 
    "${CMAKE_CURRENT_SOURCE_DIR}/api/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/api/*.hpp"
)
INSTALL(FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
)

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(lip_sync SHARED ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(lip_sync PRIVATE ${OpenCV_INCLUDE_DIRS} ${ONNXRUNTIME_INCLUDE_DIR} ${kissfft_INCLUDE_DIR} ${SndFile_INCLUDE_DIR}  ${PROJECT_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(lip_sync PRIVATE 
											core
											audio
											module_logger
											${SndFile_LIBS}
											${kissfft_LIBS}
											${ONNXRUNTIME_LIBS}
											${OpenCV_LIBS})

SET_TARGET_PROPERTIES(lip_sync PROPERTIES
	VERSION 1.0.0
	SOVERSION 1
)

INSTALL(TARGETS lip_sync DESTINATION lib)
